force-app/main/default/objects/BTN_Assignment__c/BTN_Assignment__c.object-meta.xml
<CustomObject>
    <label>Assignment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>