force-app/main/default/objects/BTN_Assignment__c/fields/AssignmentGroup__c.field-meta.xml
<CustomField>
    <fullName>AssignmentGroup__c</fullName>
    <label>Assignment Group</label>
    <length>37</length>
    <type>Text</type>
</CustomField>