force-app/main/default/objects/BTN_Assignment__c/fields/BritesheetExternalId__c.field-meta.xml
<CustomField>
    <fullName>BritesheetExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Britesheet External Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>