force-app/main/default/objects/BTN_Assignment__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Last day of Assignment</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>