force-app/main/default/objects/BTN_Assignment__c/fields/MonthAfterNextMonthFirstDay_frm__c.field-meta.xml
<CustomField>
    <fullName>MonthAfterNextMonthFirstDay_frm__c</fullName>
    <formula>DATE(IF((MONTH(TODAY())+2)&gt;12,YEAR(TODAY()) + 1,YEAR(TODAY())),IF((MONTH(TODAY()) + 2) &gt; 12, 1, MONTH(TODAY()) + 2),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month After Next Month First Day</label>
    <type>Date</type>
</CustomField>