force-app/main/default/objects/BTN_Assignment__c/fields/NextMonthFirstDay_frm__c.field-meta.xml
<CustomField>
    <fullName>NextMonthFirstDay_frm__c</fullName>
    <formula>DATE(IF((MONTH(TODAY())+1)&gt;12,YEAR(TODAY()) + 1,YEAR(TODAY())),IF((MONTH(TODAY())+1)&gt;12,1,MONTH(TODAY())+1),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Month First Day</label>
    <type>Date</type>
</CustomField>