force-app/main/default/objects/BTN_Assignment__c/fields/PercentageCoefficientAfterNextMonth__c.field-meta.xml
<CustomField>
    <fullName>PercentageCoefficientAfterNextMonth__c</fullName>
    <label>Percentage Coefficient After Next Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>