force-app/main/default/objects/BTN_Assignment__c/fields/PercentageCoefficientNextMonth__c.field-meta.xml
<CustomField>
    <fullName>PercentageCoefficientNextMonth__c</fullName>
    <label>Percentage Coefficient Next Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>