force-app/main/default/objects/BTN_Assignment__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>First day of Assignment</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>