force-app/main/default/objects/BTN_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Project__c</columns>
    <columns>Contact__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Allocation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>