force-app/main/default/objects/BTN_Assignment__c/listViews/ExternalAssignments.listView-meta.xml
<ListView>
    <fullName>ExternalAssignments</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Project__c</columns>
    <columns>Contact__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Allocation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountName__c</field>
        <operation>notContain</operation>
        <value>Britenet</value>
    </filters>
    <label>External Assignments</label>
</ListView>