force-app/main/default/objects/BTN_Assignment__c/listViews/PastAssignments.listView-meta.xml
<ListView>
    <fullName>PastAssignments</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Project__c</columns>
    <columns>Contact__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Allocation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EndDate__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Past Assignments</label>
</ListView>